src/filetreediff.css
@layer defaults {
  :root {
    --readthedocs-filetreediff-font-size: calc(
      var(--readthedocs-font-size) * 0.85
    );
    --readthedocs-filetreediff-font-family: var(--readthedocs-font-family);

    --readthedocs-filetreediff-color: rgb(252, 252, 252);
    --readthedocs-filetreediff-background-color: rgb(39, 39, 37);
    --readthedocs-filetreediff-border-color: #ddd;
    --readthedocs-filetreediff-label-color: #333;
    --readthedocs-filetreediff-chunks-color: #27ae60;
    --readthedocs-filetreediff-icon-width: 0.8rem;
  }
}

:host > div {
  position: fixed;
  top: 0;
  right: 1em;
  color: var(--readthedocs-filetreediff-color);
  background-color: var(--readthedocs-filetreediff-background-color);
  padding: 0.25em 0.75em;
  box-shadow: 0 0.1em 0.25em rgba(0, 0, 0, 0.1);
  z-index: 2000;
  border-radius: 0 0 0.375em 0.375em;
  font-size: var(--readthedocs-filetreediff-font-size);
  font-family: var(--readthedocs-filetreediff-font-family);
}

:host > div > div {
  display: flex;
  gap: 0.75em;
  align-items: center;
}

:host > div > div > select {
  flex: 1;
  padding: 0.25em 0.5em;
  border: 0;
  color: var(--readthedocs-filetreediff-color);
  background-color: var(--readthedocs-filetreediff-background-color);
  border-radius: 0.25em;
  appearance: revert;
}

:host > div > div > label {
  display: flex;
  align-items: center;
  gap: 0.35em;
  white-space: nowrap;
  cursor: pointer;
}

:host > div > div > label > input {
  margin: 0;
}

:host > div > div > span:not(.chunks) {
  display: flex;
  width: 0.5em;
  cursor: pointer;
}

:host > div > div > span.chunks {
  color: var(--readthedocs-filetreediff-chunks-color);
  font-weight: bold;
  display: flex;
  min-width: 2.5em;
}

:host > div > div > a {
  width: var(--readthedocs-filetreediff-icon-width);
  color: var(--readthedocs-filetreediff-color);
}

:host > div > div > a.version {
  width: auto;
  text-decoration: none;
  color: var(--readthedocs-filetreediff-chunks-color, #27ae60);
}

/* Expand to full width on smaller screens */
@media (max-width: 768px) {
  :host > div {
    width: calc(100% - 1em);
    margin: 0;
    right: 0;
    border-radius: 0;
    padding: 0.5em;
  }

  :host > div > div > select {
    width: 100%;
    border: 0;
  }
}

